# My-CrewAI

./: .env  .git-account-test  .gitattributes  .gitignore  AGENTS.md  OUTPUT_SYSTEM_SUMMARY.md  README.md  UPGRADEPLAN.md  config_helper.py  git-crypt-key.key  pyproject.toml  requirements.txt  reset_knowledge.py  run_flow_example.py  run_instagram_crew.py  start-web.ps1  test-knowledge-api.ps1  test_experience_flow.py  test_github_integration.py  test_output_generation.py  web_server.py
.github/: copilot-instructions.md  copilot-progress-current.md  copilot-progress.md
.github/instructions/: default.instructions.md
flows/experience_blog_flow/: README.md  pyproject.toml
flows/experience_blog_flow/src/experience_blog_flow/: __init__.py  main.py
flows/experience_blog_flow/src/experience_blog_flow/config/: agents.yaml  tasks.yaml
flows/experience_blog_flow/src/experience_blog_flow/crews/: __init__.py
flows/experience_blog_flow/src/experience_blog_flow/crews/blog_crew/: __init__.py  blog_crew.py
flows/experience_blog_flow/src/experience_blog_flow/helpers/: __init__.py  knowledge_helper.py  llm_helper.py
flows/experience_blog_flow/src/experience_blog_flow/tools/: __init__.py  search_tool.py
flows/linkedin_content_flow/: README.md  pyproject.toml
flows/linkedin_content_flow/src/linkedin_content_flow/: __init__.py  main.py
flows/linkedin_content_flow/src/linkedin_content_flow/config/: tasks.yaml
flows/linkedin_content_flow/src/linkedin_content_flow/crews/: __init__.py
flows/linkedin_content_flow/src/linkedin_content_flow/crews/content_crew/: __init__.py  content_crew.py
flows/linkedin_content_flow/src/linkedin_content_flow/helpers/: __init__.py  knowledge_helper.py
flows/linkedin_content_flow/src/linkedin_content_flow/tools/: __init__.py  search_tool.py
helpers/: __init__.py  knowledge_helper.py  llm_helper.py  output_helper.py
knowledge/: article_memory.json  web_search_results.json
output/articles/: research_article_Artificial_Intelligence_and_Machine_Learning_20250919_122146.md
output/posts/: linkedin_post_Artificial_Intelligence_and_Machine_Learning_20250919_122146.md  social_post_Cloud_Computing_and_DevOps_20250919_120903.txt  social_post_Cybersecurity_and_Data_Privacy_20250919_121106.txt  social_post_Data_Science_and_Analytics_20250919_121329.txt  social_post_Digital_Marketing_and_Social_Media_20250919_121712.txt  social_post_Latest_AI_and_Tech_Skills_Trends_20250919_095315.txt  social_post_Latest_AI_and_Tech_Skills_Trends_20250919_111630.txt  social_post_Latest_AI_and_Tech_Skills_Trends_for_software_development_20250919_112026.txt
src/instagram/: crew.py  instagram_crew.py  main.py
src/instagram/config/: agents.yaml  tasks.yaml
src/instagram/flows/: create_new_post_flow.py
src/instagram/helpers/: __init__.py  config_helper.py  ollama_helper.py
src/instagram/tools/: __init__.py  duckduckgo_search_tool.py
src/linkedin/: crew.py  linkedin_crew.py  main.py
src/linkedin/config/: agents.yaml  tasks.yaml
src/linkedin/flows/: create_new_post_flow.py
src/linkedin/helpers/: __init__.py  config_helper.py  knowledge_helper.py  llm_helper.py  ollama_helper.py
src/linkedin/tools/: __init__.py  search_tool.py
tools/: __init__.py  search_tool.py
www/: index.html
www/assets/css/: style.css
www/assets/js/: app.js
www/plots/: create_new_post_flow_plot.html
