[tool.poetry]
name = "experience-blog-flow"
version = "0.1.0"
description = "CrewAI flow for transforming experiences into blog posts"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.80.0"}
agentops = "^0.3.14"
duckduckgo-search = "^6.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
experience_blog_flow = "experience_blog_flow.main:run"

[tool.crewai]
flow_name = "Experience Blog Flow"